fix overlay issue on safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -128,4 +128,5 @@
 
 .overlay {
   -webkit-backdrop-filter: blur(8px);
+  backdrop-filter: blur(8px);
 }
